--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "react_app",
+  "name": "react_webpack_starter",
   "version": "1.0.0",
-  "description": "My first react app",
+  "description": "Boilerplate for React apps",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
   },
   "author": "Mirza Leka",
-  "license": "ISC",
+  "license": "",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "chai": "^4.1.2",
-    "express": "^4.16.3",
-    "lodash": "^4.17.10",
-    "mocha": "^5.1.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "redux": "^4.0.0",
-    "webpack": "^4.6.0",
-    "webpack-dev-server": "^3.1.3"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "chai-jquery": "^2.0.0",
-    "jquery": "^3.3.1",
-    "jsdom": "^11.9.0",
-    "react-addons-test-utils": "^15.6.2"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "html-webpack-plugin": "^3.1.0",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.4.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
