--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mirza Leka",
   "license": "",
   "dependencies": {
+    "lodash": "^4.17.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "youtube-api-search": "0.0.5"
